--- a/SAFEplus/SAFE.Presentacion/MainWindow.xaml
+++ b/SAFEplus/SAFE.Presentacion/MainWindow.xaml
@@ -5,21 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAFE.Presentacion"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="SAFE" Height="500" Width="500">
     <Grid>
-        <Button Margin="304,13,251,335" Grid.RowSpan="1" >
+        <Button Margin="95,49,0,0" Grid.RowSpan="1" Height="121" VerticalAlignment="Top" HorizontalAlignment="Left" Width="270" >
             <Image Source="imagenes/logo_safe.png"></Image>
         </Button>
-        <Label Content="Usuario&#xD;&#xA;" HorizontalAlignment="Left" Margin="266,137,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <TextBox x:Name="txtUser" HorizontalAlignment="Left" Height="36" Margin="369,137,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"/>
+        <Label Content="Usuario&#xD;&#xA;" HorizontalAlignment="Left" Margin="83,237,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <TextBox x:Name="txtUser" HorizontalAlignment="Left" Height="36" Margin="186,237,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"/>
 
-        <Label Content="Contraseña;" HorizontalAlignment="Left" Margin="246,205,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <TextBox x:Name="txtpassword" HorizontalAlignment="Left" Height="36" Margin="369,205,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"/>
+        <Label Content="Contraseña" HorizontalAlignment="Left" Margin="63,305,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <TextBox x:Name="txtpassword" HorizontalAlignment="Left" Height="36" Margin="186,305,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"/>
 
-        <Button x:Name="btnAyuda" Margin="719,10,10,362">
+        <Button x:Name="btnAyuda" Margin="395,22,0,0" HorizontalAlignment="Left" Width="62" Height="97" VerticalAlignment="Top">
             <Image Source="imagenes/ayuda.png"></Image>
         </Button>
 
-        <Button Content="Iniciar Sesion" x:Name="btnLogin" Margin="379,293,288,71" FontSize="18"/>
+        <Button Content="Iniciar Sesion" x:Name="btnLogin" Margin="147,383,0,0" FontSize="18" Height="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="158"/>
     </Grid>
 </Window>
