Problema con VS arreglado uwu

--- a/SAFEplus/SAFE.Presentacion/MainWindow.xaml
+++ b/SAFEplus/SAFE.Presentacion/MainWindow.xaml
@@ -5,19 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAFE.Presentacion"
         mc:Ignorable="d"
-        Title="SAFE" Height="500" Width="500" Icon="Imagenes/Icon3.ico" ResizeMode="CanMinimize">
+        Title="Inicio de Sesión - Safe+" Height="500" Width="500" Icon="Imagenes/Icon3.ico" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <Style x:Key="MyButton" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" BorderThickness="0" BorderBrush="Black" Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Opacity" Value="0.8" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
-        <Label Content="Correo" HorizontalAlignment="Left" Margin="99,209,0,0" VerticalAlignment="Top" FontSize="20" Height="36" Width="110"/>
-        <TextBox x:Name="txtUser" HorizontalAlignment="Left" Height="36" Margin="214,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179" FontSize="22" TabIndex="0"/>
+        <Label Content="Correo" HorizontalAlignment="Left" Margin="101,209,0,0" VerticalAlignment="Top" FontSize="20" Height="36" Width="110"/>
+        <TextBox x:Name="txtUser" HorizontalAlignment="Left" Height="36" Margin="216,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179" FontSize="22" TabIndex="0"/>
 
-        <Label Content="Contraseña" HorizontalAlignment="Left" Margin="99,278,0,0" VerticalAlignment="Top" FontSize="20" Height="36"/>
+        <Label Content="Contraseña" HorizontalAlignment="Left" Margin="101,278,0,0" VerticalAlignment="Top" FontSize="20" Height="36"/>
 
-        <Button x:Name="btnAyuda" Margin="0,25,25,0" HorizontalAlignment="Right" Width="62" Height="60" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="{x:Null}" TabIndex="3">
-            <Image Source="imagenes/ayuda.png"/>
+        <Button x:Name="btnAyuda" Margin="0,25,25,0" HorizontalAlignment="Right" Width="50" Height="50" VerticalAlignment="Top" BorderBrush="{x:Null}" TabIndex="3" Foreground="{x:Null}" Style="{DynamicResource MyButton}" AutomationProperties.HelpText="Ayuda">
+            <Button.Background>
+                <ImageBrush ImageSource="Imagenes/pregunta.png" Stretch="UniformToFill"/>
+            </Button.Background>
         </Button>
 
-        <Button Content="Iniciar Sesion" x:Name="btnLogin" Margin="174,370,0,0" FontSize="18" Height="35" VerticalAlignment="Top" HorizontalAlignment="Left" Width="158" TabIndex="2" Click="btnLogin_Click"/>
-        <PasswordBox x:Name="pwdPass" HorizontalAlignment="Left" Margin="214,278,0,0" VerticalAlignment="Top" Width="179" Height="36" FontSize="22" TabIndex="1"/>
-        <Image Source="imagenes/logo_safe.png" Margin="114,52,114,325"/>
+        <Button Content="Iniciar Sesion" x:Name="btnLogin" Margin="172,370,172,0" FontSize="18" Height="35" VerticalAlignment="Top" TabIndex="2" Click="btnLogin_Click" Background="White" Foreground="Black" FontWeight="Bold" BorderBrush="Black"/>
+        <PasswordBox x:Name="pwdPass" HorizontalAlignment="Left" Margin="216,278,0,0" VerticalAlignment="Top" Width="179" Height="36" FontSize="22" TabIndex="1"/>
+        <Image Source="Imagenes/Icon2.png" Margin="117,50,117,311"/>
     </Grid>
 </Window>
