--- a/SAFEplus/SAFE.Presentacion/RegistroClientes.xaml
+++ b/SAFEplus/SAFE.Presentacion/RegistroClientes.xaml
@@ -25,11 +25,18 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style TargetType="Button" x:Key="Round">
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="10" />
+                </Style>
+            </Style.Resources>
+        </Style>
     </Window.Resources>
     <Grid>
         <Image HorizontalAlignment="Right" Height="45" Margin="0,25,25,0" VerticalAlignment="Top" Width="100" Source="Imagenes/Icon2.png" OpacityMask="Black"/>
-        <Rectangle HorizontalAlignment="Left" Margin="70,90,0,90" RadiusY="20.458" RadiusX="20.458" Stroke="Black" Width="654"/>
-        <Button x:Name="btnVolver" Content="" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Width="33" Height="30" BorderBrush="{x:Null}" AutomationProperties.HelpText="Volver" Click="btnVolver_Click" Foreground="{x:Null}" RenderTransformOrigin="0.5,0.5" Cursor="Hand" Style="{DynamicResource MyButton}" TabIndex="10">
+        <Rectangle HorizontalAlignment="Left" Margin="70,90,0,25" RadiusY="25" RadiusX="25" Stroke="#FF707070" Width="654"/>
+        <Button x:Name="btnVolver" Content="" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Width="33" Height="30" BorderBrush="{x:Null}" AutomationProperties.HelpText="Volver" Click="btnVolver_Click" Foreground="{x:Null}" RenderTransformOrigin="0.5,0.5" Cursor="Hand" Style="{DynamicResource MyButton}" TabIndex="10" ToolTip="Atrás">
             <Button.Background>
                 <ImageBrush ImageSource="Imagenes/flecha-izquierda.png" Stretch="UniformToFill"/>
             </Button.Background>
@@ -53,6 +60,6 @@
         <Label Content="-" HorizontalAlignment="Left" Margin="258,110,0,0" VerticalAlignment="Top" FontSize="16"/>
         <Label Content="Apellidos:" HorizontalAlignment="Left" Margin="410,168,0,0" VerticalAlignment="Top" FontSize="16" Width="80"/>
         <Label Content="Registro de Clientes" Margin="287,25,0,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="220"/>
-        <Button x:Name="btnRegistrar" Content="Registrar" Margin="347,0,0,25" Width="100" BorderBrush="Black" Background="White" HorizontalAlignment="Left" FontSize="16" Height="30" VerticalAlignment="Bottom" TabIndex="9" Click="btnRegistrar_Click" Cursor="Hand"/>
+        <Button x:Name="btnRegistrar" Content="Registrar" Margin="347,341,0,0" BorderBrush="Black" Background="White" FontSize="16" Height="30" VerticalAlignment="Top" TabIndex="9" Click="btnRegistrar_Click" Cursor="Hand" Style="{DynamicResource Round}" HorizontalAlignment="Left" Width="100"/>
     </Grid>
 </Window>
