--- a/SAFEplus/SAFE.Presentacion/VistaCliente.xaml
+++ b/SAFEplus/SAFE.Presentacion/VistaCliente.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SAFE.Presentacion.Ayuda"
+﻿<Window x:Class="SAFE.Presentacion.VistaCliente"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAFE.Presentacion"
         mc:Ignorable="d"
-        Title="Ayuda" Height="450" Width="800" Icon="Imagenes/Icon3.ico">
+        Title="Vista de Clientes - Safe+" Height="450" Width="800" Icon="Imagenes/Icon3.ico" WindowStartupLocation="CenterScreen" SizeToContent="Width">
     <Window.Resources>
         <Style x:Key="MyButton" TargetType="{x:Type Button}">
             <Setter Property="OverridesDefaultStyle" Value="True" />
@@ -27,12 +27,14 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <Button x:Name="btnVolver" Content="" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Width="33" Height="30" BorderBrush="{x:Null}" AutomationProperties.HelpText="Volver" Click="btnVolver_Click" Foreground="{x:Null}" RenderTransformOrigin="0.5,0.5" Cursor="Hand" Style="{DynamicResource MyButton}" TabIndex="10" ToolTip="Atrás">
+        <Image Height="45" Margin="0,25,25,0" VerticalAlignment="Top" Source="Imagenes/Icon2.png" OpacityMask="Black" HorizontalAlignment="Right" Width="98"/>
+        <Button x:Name="btnVolver" Content="" Margin="25,25,0,0" VerticalAlignment="Top" Height="30" BorderBrush="{x:Null}" AutomationProperties.HelpText="Volver" Click="btnVolver_Click" Foreground="{x:Null}" RenderTransformOrigin="0.5,0.5" Cursor="Hand" Style="{DynamicResource MyButton}" TabIndex="10" ToolTip="Atrás" HorizontalAlignment="Left" Width="31">
             <Button.Background>
                 <ImageBrush ImageSource="Imagenes/flecha-izquierda.png" Stretch="UniformToFill"/>
             </Button.Background>
         </Button>
-        <WebBrowser Margin="72,10,10,10" Source="https://www.google.cl/"/>
+        <Label Content="Vista de Clientes" Margin="287,25,287,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center"/>
+        <DataGrid Margin="50,100,50,51" Background="White" BorderBrush="Black"/>
 
     </Grid>
 </Window>
