--- a/SAFEplus/SAFE.Presentacion/Contratos.xaml
+++ b/SAFEplus/SAFE.Presentacion/Contratos.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SAFE.Presentacion.Ayuda"
+﻿<Window x:Class="SAFE.Presentacion.Contratos"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAFE.Presentacion"
         mc:Ignorable="d"
-        Title="Ayuda" Height="450" Width="800" Icon="Imagenes/Icon3.ico">
+        Title="Contratos - Safe+" Height="450" Width="800" Icon="Imagenes/Icon3.ico" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="MyButton" TargetType="{x:Type Button}">
             <Setter Property="OverridesDefaultStyle" Value="True" />
@@ -27,12 +27,15 @@
         </Style>
     </Window.Resources>
     <Grid>
+        <Image HorizontalAlignment="Right" Height="45" Margin="0,25,23,0" VerticalAlignment="Top" Width="100" Source="Imagenes/Icon2.png" OpacityMask="Black"/>
         <Button x:Name="btnVolver" Content="" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Width="33" Height="30" BorderBrush="{x:Null}" AutomationProperties.HelpText="Volver" Click="btnVolver_Click" Foreground="{x:Null}" RenderTransformOrigin="0.5,0.5" Cursor="Hand" Style="{DynamicResource MyButton}" TabIndex="10" ToolTip="Atrás">
             <Button.Background>
                 <ImageBrush ImageSource="Imagenes/flecha-izquierda.png" Stretch="UniformToFill"/>
             </Button.Background>
         </Button>
-        <WebBrowser Margin="75,10,10,10" Source="https://www.google.cl"/>
+        <Label Content="Contratos" Margin="287,25,0,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="220"/>
+        <Label Content="RUT Cliente:" HorizontalAlignment="Left" Margin="287,80,0,0" VerticalAlignment="Top" FontSize="16" Height="30"/>
+        <ComboBox x:Name="cboRutCliente" HorizontalAlignment="Left" Margin="387,85,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black"></ComboBox>
 
     </Grid>
 </Window>
