--- a/SAFEplus/SAFE.Presentacion/RegistroClientes.xaml
+++ b/SAFEplus/SAFE.Presentacion/RegistroClientes.xaml
@@ -35,31 +35,32 @@
     </Window.Resources>
     <Grid>
         <Image HorizontalAlignment="Right" Height="45" Margin="0,25,25,0" VerticalAlignment="Top" Width="100" Source="Imagenes/Icon2.png" OpacityMask="Black"/>
-        <Rectangle HorizontalAlignment="Left" Margin="70,90,0,25" RadiusY="25" RadiusX="25" Stroke="#FF707070" Width="654"/>
+        <Rectangle HorizontalAlignment="Left" Margin="70,100,0,50" RadiusY="25" RadiusX="25" Stroke="#FF707070" Width="654" Fill="#3FFF4D00"/>
         <Button x:Name="btnVolver" Content="" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Width="33" Height="30" BorderBrush="{x:Null}" AutomationProperties.HelpText="Volver" Click="btnVolver_Click" Foreground="{x:Null}" RenderTransformOrigin="0.5,0.5" Cursor="Hand" Style="{DynamicResource MyButton}" TabIndex="10" ToolTip="Atrás">
             <Button.Background>
                 <ImageBrush ImageSource="Imagenes/flecha-izquierda.png" Stretch="UniformToFill"/>
             </Button.Background>
         </Button>
-        <TextBox x:Name="txtRut" HorizontalAlignment="Left" Height="23" Margin="173,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80" FontSize="16" MaxLength="8" MaxLines="1" BorderBrush="Black" TabIndex="0"/>
-        <TextBox x:Name="txtNombres" HorizontalAlignment="Left" Height="23" Margin="173,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="215" FontSize="16" BorderBrush="Black" TabIndex="3"/>
+        <TextBox x:Name="txtRut" HorizontalAlignment="Left" Height="23" Margin="173,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80" FontSize="16" MaxLength="8" MaxLines="1" BorderBrush="Black" TabIndex="0"/>
+        <TextBox x:Name="txtNombres" HorizontalAlignment="Left" Height="23" Margin="173,179,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="215" FontSize="16" BorderBrush="Black" TabIndex="3"/>
         <TextBox x:Name="txtCorreo" HorizontalAlignment="Left" Height="23" Margin="173,229,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="215" FontSize="16" BorderBrush="Black" TabIndex="5"/>
         <TextBox x:Name="txtDireccion" HorizontalAlignment="Left" Height="23" Margin="492,229,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="215" FontSize="16" BorderBrush="Black" TabIndex="6"/>
-        <TextBox x:Name="txtTelefono" HorizontalAlignment="Left" Height="23" Margin="173,283,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="16" BorderBrush="Black" TabIndex="7"/>
-        <TextBox x:Name="txtCelular" HorizontalAlignment="Left" Height="23" Margin="495,283,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="16" BorderBrush="Black" TabIndex="8"/>
-        <TextBox x:Name="txtEdad" HorizontalAlignment="Left" Height="23" Margin="495,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" FontSize="16" MaxLength="3" MaxLines="1" BorderBrush="Black" TabIndex="2" TextAlignment="Center"/>
-        <TextBox x:Name="txtDv" HorizontalAlignment="Left" Height="23" Margin="281,114,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="30" FontSize="16" TextAlignment="Center" MaxLength="1" MaxLines="1" BorderBrush="Black" TabIndex="1"/>
-        <TextBox x:Name="txtApellidos" HorizontalAlignment="Left" Height="23" Margin="492,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="215" FontSize="16" BorderBrush="Black" TabIndex="4"/>
-        <Label Content="RUT:" HorizontalAlignment="Left" Margin="87,110,0,0" VerticalAlignment="Top" FontSize="16" Width="81"/>
-        <Label Content="Nombres:" HorizontalAlignment="Left" Margin="87,168,0,0" VerticalAlignment="Top" FontSize="16" Height="31" Width="81"/>
+        <TextBox x:Name="txtTelefono" HorizontalAlignment="Left" Height="23" Margin="173,279,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="16" BorderBrush="Black" TabIndex="7"/>
+        <TextBox x:Name="txtCelular" HorizontalAlignment="Left" Height="23" Margin="495,279,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="16" BorderBrush="Black" TabIndex="8"/>
+        <TextBox x:Name="txtEdad" HorizontalAlignment="Left" Height="23" Margin="495,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="35" FontSize="16" MaxLength="3" MaxLines="1" BorderBrush="Black" TabIndex="2" TextAlignment="Center"/>
+        <TextBox x:Name="txtDv" HorizontalAlignment="Left" Height="23" Margin="281,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="30" FontSize="16" TextAlignment="Center" MaxLength="1" MaxLines="1" BorderBrush="Black" TabIndex="1"/>
+        <TextBox x:Name="txtApellidos" HorizontalAlignment="Left" Height="23" Margin="492,179,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="215" FontSize="16" BorderBrush="Black" TabIndex="4"/>
+        <Label Content="RUT:" HorizontalAlignment="Left" Margin="87,125,0,0" VerticalAlignment="Top" FontSize="16" Width="81"/>
+        <Label Content="Nombres:" HorizontalAlignment="Left" Margin="87,175,0,0" VerticalAlignment="Top" FontSize="16" Height="31" Width="81"/>
         <Label Content="Correo:" HorizontalAlignment="Left" Margin="87,225,0,0" VerticalAlignment="Top" FontSize="16" Width="81"/>
         <Label Content="Dirección:" HorizontalAlignment="Left" Margin="410,225,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Label Content="Edad:" HorizontalAlignment="Left" Margin="410,110,0,0" VerticalAlignment="Top" FontSize="16" Width="80"/>
-        <Label Content="Telefono:" HorizontalAlignment="Left" Margin="87,279,0,0" VerticalAlignment="Top" FontSize="16" Width="81"/>
-        <Label Content="Celular:" HorizontalAlignment="Left" Margin="410,279,0,0" VerticalAlignment="Top" FontSize="16" Width="80"/>
-        <Label Content="-" HorizontalAlignment="Left" Margin="258,110,0,0" VerticalAlignment="Top" FontSize="16"/>
-        <Label Content="Apellidos:" HorizontalAlignment="Left" Margin="410,168,0,0" VerticalAlignment="Top" FontSize="16" Width="80"/>
-        <Label Content="Registro de Clientes" Margin="287,25,0,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="220"/>
-        <Button x:Name="btnRegistrar" Content="Registrar" Margin="347,341,0,0" BorderBrush="Black" Background="White" FontSize="16" Height="30" VerticalAlignment="Top" TabIndex="9" Click="btnRegistrar_Click" Cursor="Hand" Style="{DynamicResource Round}" HorizontalAlignment="Left" Width="100"/>
+        <Label Content="Edad:" HorizontalAlignment="Left" Margin="410,125,0,0" VerticalAlignment="Top" FontSize="16" Width="80"/>
+        <Label Content="Telefono:" HorizontalAlignment="Left" Margin="87,275,0,0" VerticalAlignment="Top" FontSize="16" Width="81"/>
+        <Label Content="Celular:" HorizontalAlignment="Left" Margin="410,275,0,0" VerticalAlignment="Top" FontSize="16" Width="80"/>
+        <Label Content="-" HorizontalAlignment="Left" Margin="258,125,0,0" VerticalAlignment="Top" FontSize="16"/>
+        <Label Content="Apellidos:" HorizontalAlignment="Left" Margin="410,175,0,0" VerticalAlignment="Top" FontSize="16" Width="80"/>
+        <Label Content="Registro de Clientes" Margin="287,40,0,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Width="220"/>
+        <Button x:Name="btnRegistrar" Content="Registrar" Margin="347,325,0,0" BorderBrush="Black" Background="White" FontSize="16" Height="30" VerticalAlignment="Top" TabIndex="9" Click="btnRegistrar_Click" Cursor="Hand" Style="{DynamicResource Round}" HorizontalAlignment="Left" Width="100"/>
+        <Separator Height="15" Margin="70,80,70,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
