--- a/SAFEplus/SAFE.Presentacion/MonitoreoActividades.xaml
+++ b/SAFEplus/SAFE.Presentacion/MonitoreoActividades.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SAFE.Presentacion.VistaTrabajador"
+﻿<Window x:Class="SAFE.Presentacion.MonitoreoActividades"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SAFE.Presentacion"
         mc:Ignorable="d"
-        Title="Vista de Trabajadores - Safe+" Height="450" Width="800" Icon="Imagenes/Icon3.ico" WindowStartupLocation="CenterScreen">
+        Title="Monitoreo de Actividades - Safe+" Height="450" Width="800" Icon="Imagenes/Icon3.ico" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="MyButton" TargetType="{x:Type Button}">
             <Setter Property="OverridesDefaultStyle" Value="True" />
@@ -33,27 +33,9 @@
                 <ImageBrush ImageSource="Imagenes/flecha-izquierda.png" Stretch="UniformToFill"/>
             </Button.Background>
         </Button>
-        <Label Content="Vista de Trabajadores" Margin="280,50,280,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center"/>
-        <TabControl Margin="50,100,50,25">
-            <TabItem Header="Lista de Trabajadores">
-                <Grid>
-                    <DataGrid x:Name="dtgListaTrabajadores" Background="White" BorderBrush="Black"/>
-                </Grid>
-            </TabItem>
-            <TabItem Header="Carga Laboral por Trabajador">
-                <Grid Background="#3FFF4D00">
-                    <Label Content="RUT Trabajador:" HorizontalAlignment="Right" Margin="0,5,175,0" VerticalAlignment="Top" FontSize="16" Height="30"/>
-                    <ComboBox x:Name="cboRutTrabajador" Margin="0,10,50,0" VerticalAlignment="Top" BorderBrush="Black" HorizontalAlignment="Right" Width="120"/>
-                    <DataGrid x:Name="dtgPagosCliente" Margin="0,42,0,0" Background="White"/>
-                    <Button x:Name="btnBuscar" Content="" HorizontalAlignment="Right" Margin="0,10,15,0" VerticalAlignment="Top" Width="25" Height="25" BorderBrush="{x:Null}" Style="{DynamicResource MyButton}">
-                        <Button.Background>
-                            <ImageBrush ImageSource="Imagenes/lupa.png" Stretch="Uniform"/>
-                        </Button.Background>
-                    </Button>
-                </Grid>
-            </TabItem>
-        </TabControl>
+        <Label Content="Monitoreo de Actividades" Margin="257,50,258,0" VerticalAlignment="Top" Height="40" FontSize="22" FontWeight="Bold" HorizontalContentAlignment="Center" Width="278"/>
         <Separator Height="10" Margin="50,90,50,0" VerticalAlignment="Top"/>
-
+        <DataGrid x:Name="dtgActividades" Margin="50,125,50,25" Background="White" BorderBrush="Black"/>
+        
     </Grid>
 </Window>
